--- a/mission/templates/mission/registry.html
+++ b/mission/templates/mission/registry.html
@@ -61,7 +61,7 @@
                                                             Terminé
                                                         </span>
 
-                                                    {% elif fiche.state == 'canceled' %}
+                                                    {% elif fiche.statut_mission == 'cancelled' %}
                                                         <span class="badge bg-danger">
                                                             Non réalisée
                                                         </span>
