--- a/Statistic/templates/statistic/fiche.html
+++ b/Statistic/templates/statistic/fiche.html
@@ -9,4 +9,449 @@
 
 {% block content %}
 
+<section class="content-header row">
+    <div class="col-sm-12">
+    <h1>Statistique Fiches d'information / Fiches de pertinence</h1>
+    </div>
+   
+</section>
+
+
+<section class="content">
+    <input name="stat-data" value="{% url 'stat-fi-fp-datas' %}" hidden />
+    <div class="row">
+        <div class="col-lg-7 col-md-4">
+
+        </div>
+        <div class="col-md-8 col-lg-5 col-sm-12 form-group" 
+        id="daterange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+        <label for="daterange">Filtre : </label> 
+            <i class="fa fa-calendar"></i>&nbsp;
+            <span></span> <i class="fa fa-caret-down"></i>
+        </div>
+    </div>
+    <div class="row">
+
+    
+        <div class="col-3">
+
+            <div class="card ">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Total fiches d'information</p>
+                    <p class="num" id="num-fi">{{number_fi}}</p>
+                </div>
+            </div>
+
+            <div class="card ">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Total fiches de pertinence</p>
+                    <p class="num" id="num-fp">{{number_fp}}</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-9">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Statistique des fiches par mois
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="card-body">
+                        <canvas id="donutChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- -->
+    <div class="row">
+        <div class="col-md-6 col-lg-6 col-sm-6">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Fiches d'information par Régions
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="chart">
+                        <canvas id="fiRegion" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-lg-6 col-sm-6">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Fiches de pertinence par Régions
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="chart">
+                        <canvas id="fpRegion" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Fiches d'information par organisation
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="chart">
+                        <canvas id="fiOrg" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Fiches de pertinence par organisation
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="chart">
+                        <canvas id="fpOrg" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js" defer></script>
+
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+
+<script src="{% static 'js/shared.js' %}"></script>
+
+<script>
+    $(document).ready(function () {
+
+        var chartArray = []
+
+        // Change language first 
+        var datepicker_regional_fr = {
+            closeText: "Fermer",
+            format: "DD/MM/YYYY",
+            prevText: "Précédent",
+            applyLabel: "Appliquer",
+            cancelLabel: "Annuler",
+            nextText: "Suivant",
+            currentText: "Aujourd'hui",
+            customRangeLabel: "Personnaliser",
+            monthNames: ["janvier", "février", "mars", "avril", "mai", "juin",
+            "juillet", "août", "septembre", "octobre", "novembre", "décembre"
+            ],
+            monthNamesShort: ["janv.", "févr.", "mars", "avr.", "mai", "juin",
+            "juil.", "août", "sept.", "oct.", "nov.", "déc."
+            ],
+            //daysO: ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"],
+            daysOfWeek: ["dim.", "lun.", "mar.", "mer.", "jeu.", "ven.", "sam."],
+            dayNamesMin: ["D", "L", "M", "M", "J", "V", "S"],
+            weekHeader: "Sem.",
+            dateFormat: "dd/mm/yy",
+            firstDay: 1,
+            isRTL: false,
+            showMonthAfterYear: true,
+            yearSuffix: ""
+        };
+
+        var start = moment().subtract(29, 'days');
+        var end = moment();
+
+        function cb(start, end) {
+            $('#daterange span').html(start.format('D MMMM YYYY') + ' - ' + end.format('D MMMM YYYY'));
+            lstart = moment($('#daterange').data('daterangepicker').startDate).toDate(),
+            lend = moment($('#daterange').data('daterangepicker').endDate).toDate();
+
+            // Make a date 
+            start_date = lstart.getFullYear() + "-" + (lstart.getMonth() + 1)  + "-" + lstart.getDate() ; 
+            end_date =  lend.getFullYear() + "-" + (lend.getMonth() + 1) + "-" + lend.getDate() ; 
+
+             
+            //console.log(test); 
+            // Send it to AJAX 
+
+            build_graphs(start , end , chartArray)
+             
+        }
+
+        $('#daterange').daterangepicker({
+            locale : datepicker_regional_fr,
+            startDate: start,
+            endDate: end,
+            ranges: {
+            'Ajourd\'hui': [moment(), moment()],
+            'Hier': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+            'Les 7 derniers jours': [moment().subtract(6, 'days'), moment()],
+            'Les 30 derniers jours': [moment().subtract(29, 'days'), moment()],
+            'Ce mois': [moment().startOf('month'), moment().endOf('month')],
+            'Le mois dernier': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+            }
+        }, cb);
+
+        cb(start, end);
+
+        
+      
+   });
+
+
+   function build_graphs(start , end , chartArray){
+    
+        
+
+        $.ajax({
+            type: "GET",
+            url: $("input[name=stat-data]").val(),
+            data: {start: start_date, end : end_date},
+            dataType: "JSON",
+            beforeSend: function(){
+                for(val in chartArray){
+                    console.log(chartArray[val] )
+                    chartArray[val].destroy()
+                }
+            },
+            success: function (response) {    
+                console.log(response)
+                
+                
+                // Mise à jour des nombres                     
+                document.getElementById('num-fi').innerText = response.number_fi ;
+                document.getElementById('num-fp').innerText = response.number_fp ;
+
+                //alert par mois
+                var xValues = ["Janvier", "Fevrier", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
+                var fiByMonth = []
+                var fpByMonth = []
+
+                for(var key in response.fi_by_months){
+                    fiByMonth.push(response.fi_by_months[key])
+                }
+
+                for(var key in response.fp_by_months){
+                    fpByMonth.push(response.fp_by_months[key])
+                }
+
+                var ChartMois = new Chart("donutChart", {
+                    type: "bar",
+                    data: {
+                        labels: xValues,
+                        datasets: [
+                            
+                            {
+                                label               : 'Fiche d\'information',
+                                backgroundColor     : 'rgba(60,141,188,0.9)',
+                                borderColor         : 'rgba(60,141,188,0.8)',
+                                pointRadius          : false,
+                                pointColor          : '#3b8bba',
+                                pointStrokeColor    : 'rgba(60,141,188,1)',
+                                pointHighlightFill  : '#fff',
+                                pointHighlightStroke: 'rgba(60,141,188,1)',
+                                data                : fiByMonth
+                            },
+                            {
+                                label               : 'Fiche de pertinence',
+                                backgroundColor     : 'rgba(21, 214, 222, 1)',
+                                borderColor         : 'rgba(210, 214, 222, 1)',
+                                pointRadius         : false,
+                                pointColor          : 'rgba(210, 214, 222, 1)',
+                                pointStrokeColor    : '#c1c7d1',
+                                pointHighlightFill  : '#fff',
+                                pointHighlightStroke: 'rgba(220,220,220,1)',
+                                data                : fpByMonth
+                            },
+                        ]
+                    },
+                    options : {
+                        scales: {
+                            y: {
+                                max: 9,
+                                min: 0, 
+                                stepSize: 1
+
+                            },
+                        }
+                    }
+                
+                });
+
+                
+
+
+                //alerts par regions
+
+                labels = []
+                fiByRegions = []
+                fpByRegions = []
+
+                for(var key in response.fi_by_regions){
+                    labels.push(key)
+                    fiByRegions.push (response.fi_by_regions[key])
+                }
+
+                for(var key in response.fp_by_regions){
+                    fpByRegions.push (response.fp_by_regions[key])
+                }
+
+                var fiCanvas3 = $('#fiRegion').get(0).getContext('2d');
+                var fpCanvas3 = $('#fpRegion').get(0).getContext('2d');
+                var fidonutData3      = {
+                    labels: labels,
+                    datasets: [
+                        
+                        {
+                            label               : 'Fiche d\'information',
+                            backgroundColor     : ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#686868', '#f56004', '#30c00f', '#f40c12', '#00d0df'],
+                            borderColor         : 'rgba(60,141,188,0.8)',
+                            pointRadius          : false,
+                            pointColor          : '#3b8bba',
+                            pointStrokeColor    : 'rgba(60,141,188,1)',
+                            pointHighlightFill  : '#fff',
+                            pointHighlightStroke: 'rgba(60,141,188,1)',
+                            data                : fiByRegions
+                        }
+                    ]
+                }
+
+                var fpdonutData3      = {
+                    labels: labels,
+                    datasets: [
+                       
+                        {
+                            label               : 'Fiche de pertinence',
+                            backgroundColor     : ['#00c0ef', '#3c8dbc', '#686868', '#f56004','#f56954', '#00a65a', '#f39c12',  '#30c00f', '#f40c12', '#00d0df'],
+                            borderColor         : 'rgba(210, 214, 222, 1)',
+                            pointRadius         : false,
+                            pointColor          : 'rgba(210, 214, 222, 1)',
+                            pointStrokeColor    : '#c1c7d1',
+                            pointHighlightFill  : '#fff',
+                            pointHighlightStroke: 'rgba(220,220,220,1)',
+                            data                : fpByRegions
+                        },
+                    ]
+                }
+                
+                var fiChartRegion =  new Chart(fiCanvas3, {
+                    type: 'pie',
+                    data: fidonutData3,
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: true,
+                        plugins: {
+                            labels: {
+                            render: 'percentage',
+                            precision: 2
+                            }
+                        },
+                    }
+                })
+
+                var fpChartRegion =  new Chart(fpCanvas3, {
+                    type: 'pie',
+                    data: fpdonutData3,
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: true,
+                        plugins: {
+                            labels: {
+                            render: 'percentage',
+                            precision: 2
+                            }
+                        },
+                    }
+                })
+
+
+                // by canals
+                labels = []
+                fiByOrg = []
+                fpByOrg = []
+
+                for(var key in response.fi_by_org){
+                    labels.push(key)
+                    fiByOrg.push (response.fi_by_org[key])
+                }
+
+                for(var key in response.fp_by_org){
+                    fpByOrg.push (response.fp_by_org[key])
+                }
+
+                var fiChartCanvas2 = $('#fiOrg').get(0).getContext('2d')
+                var fpChartCanvas2 = $('#fpOrg').get(0).getContext('2d')
+                var coloR = []
+                var dynamicColors = function() {
+                    var r = Math.floor(Math.random() * 255);
+                    var g = Math.floor(Math.random() * 255);
+                    var b = Math.floor(Math.random() * 255);
+                    return "rgb(" + r + "," + g + "," + b + ")";
+                };
+
+                for (var i in labels) {
+                    
+                    coloR.push(dynamicColors());
+                }
+
+                var fidonutData2      = {
+                    labels: labels,
+                    datasets: [
+                        {
+                        data: fiByOrg,
+                        backgroundColor : coloR,
+                        }
+                    ]
+                }
+
+                var fpdonutData2      = {
+                    labels: labels,
+                    datasets: [
+                        {
+                        data: fpByOrg,
+                        backgroundColor : coloR,
+                        }
+                    ]
+                }
+                
+                //Créer des stat en forme circulaires
+                // You can switch between pie and douhnut using the method below.
+                var fiorgDonut = new Chart(fiChartCanvas2, {
+                    type: 'pie',
+                    data: fidonutData2 
+                    
+                })
+
+                var fporgDonut = new Chart(fpChartCanvas2, {
+                    type: 'pie',
+                    data: fpdonutData2 
+                    
+                })
+
+                chartArray.push(ChartMois , fiChartRegion , fpChartRegion , fiorgDonut , fporgDonut)
+
+
+            }
+        });
+
+    }
+</script>
+
 {% endblock %}
