--- a/Statistic/templates/statistic/mission.html
+++ b/Statistic/templates/statistic/mission.html
@@ -9,4 +9,369 @@
 
 {% block content %}
 
+<section class="content-header row">
+    <div class="col-sm-12">
+    <h1>Statistique Fiches d'information / Fiches de pertinence</h1>
+    </div>
+   
+</section>
+
+
+<section class="content">
+    <input name="stat-data" value="{% url 'stat-mi-datas' %}" hidden />
+    <div class="row">
+        <div class="col-lg-7 col-md-4">
+
+        </div>
+        <div class="col-md-8 col-lg-5 col-sm-12 form-group" id="daterange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+        <label for="daterange">Filtre : </label> 
+            <i class="fa fa-calendar"></i>&nbsp;
+            <span></span> <i class="fa fa-caret-down"></i>
+        </div>
+    </div>
+    <div class="row row-cols-auto">
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Total de missions</p>
+                    <p id="TotalMission" class ="num"></p>
+                </div>
+            </div>   
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Missions terminées</p>
+                    <p id="missionTermine" class="num"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Missions en cours</p>
+                    <p class="num" id="missionOngoing"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="top"></div>
+                <div class="card-body stats-alert">
+                    <p class="title">Missions non réalisées</p>
+                    <p id="missionNonRealise" class="num"></p>
+                </div>
+            </div>
+        </div>
+            
+    </div> 
+    <div class="row">
+        <div class="col-12">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Statistique des missions par mois   
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="card-body">
+                        <canvas id="barChatMission" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <div class="card card-success">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Organisations   
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="card-body">
+                        <canvas id="donutOrg" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+            <div class="col-6">
+            <div class="card card-secondary">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Régions  
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="card-body">
+                        <canvas id="donutChartRegion" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js" defer></script>
+
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+
+    <script src="{% static 'js/shared.js' %}"></script>
+
+    <script>
+        $(document).ready(function () {
+    
+            var chartArray = []
+    
+            // Change language first 
+            var datepicker_regional_fr = {
+                closeText: "Fermer",
+                format: "DD/MM/YYYY",
+                prevText: "Précédent",
+                applyLabel: "Appliquer",
+                cancelLabel: "Annuler",
+                nextText: "Suivant",
+                currentText: "Aujourd'hui",
+                customRangeLabel: "Personnaliser",
+                monthNames: ["janvier", "février", "mars", "avril", "mai", "juin",
+                "juillet", "août", "septembre", "octobre", "novembre", "décembre"
+                ],
+                monthNamesShort: ["janv.", "févr.", "mars", "avr.", "mai", "juin",
+                "juil.", "août", "sept.", "oct.", "nov.", "déc."
+                ],
+                //daysO: ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"],
+                daysOfWeek: ["dim.", "lun.", "mar.", "mer.", "jeu.", "ven.", "sam."],
+                dayNamesMin: ["D", "L", "M", "M", "J", "V", "S"],
+                weekHeader: "Sem.",
+                dateFormat: "dd/mm/yy",
+                firstDay: 1,
+                isRTL: false,
+                showMonthAfterYear: true,
+                yearSuffix: ""
+            };
+    
+            var start = moment().subtract(29, 'days');
+            var end = moment();
+    
+            function cb(start, end) {
+                $('#daterange span').html(start.format('D MMMM YYYY') + ' - ' + end.format('D MMMM YYYY'));
+                lstart = moment($('#daterange').data('daterangepicker').startDate).toDate(),
+                lend = moment($('#daterange').data('daterangepicker').endDate).toDate();
+    
+                // Make a date 
+                start_date = lstart.getFullYear() + "-" + (lstart.getMonth() + 1)  + "-" + lstart.getDate() ; 
+                end_date =  lend.getFullYear() + "-" + (lend.getMonth() + 1) + "-" + lend.getDate() ; 
+    
+                 
+                //console.log(test); 
+                // Send it to AJAX 
+    
+                build_graphs(start , end , chartArray)
+                 
+            }
+    
+            $('#daterange').daterangepicker({
+                locale : datepicker_regional_fr,
+                startDate: start,
+                endDate: end,
+                ranges: {
+                'Ajourd\'hui': [moment(), moment()],
+                'Hier': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                'Les 7 derniers jours': [moment().subtract(6, 'days'), moment()],
+                'Les 30 derniers jours': [moment().subtract(29, 'days'), moment()],
+                'Ce mois': [moment().startOf('month'), moment().endOf('month')],
+                'Le mois dernier': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                }
+            }, cb);
+    
+            cb(start, end);
+    
+            
+          
+       });
+    
+    
+       function build_graphs(start , end , chartArray){
+        
+            
+    
+            $.ajax({
+                type: "GET",
+                url: $("input[name=stat-data]").val(),
+                data: {start: start_date, end : end_date},
+                dataType: "JSON",
+                beforeSend: function(){
+                    for(val in chartArray){
+                        console.log(chartArray[val] )
+                        chartArray[val].destroy()
+                    }
+                },
+                success: function (response) {    
+                    console.log(response)
+                    
+                    
+                    // Mise à jour des nombres                     
+                    document.getElementById('TotalMission').innerText = response.total_mi ;
+                    document.getElementById('missionTermine').innerText = response.total_ended ;
+                    document.getElementById('missionOngoing').innerText = response.total_started ;
+                    document.getElementById('missionNonRealise').innerText = response.total_cancel ;
+    
+                    //alert par mois
+                    var xValues = ["Janvier", "Fevrier", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
+                    var miByMonth = []
+    
+                    for(var key in response.mi_by_month){
+                        miByMonth.push(response.mi_by_month[key])
+                    }
+    
+                
+                    console.log(miByMonth)
+                    var ChartMois = new Chart("barChatMission", {
+                        type: "bar",
+                        data: {
+                            labels: xValues,
+                            datasets: [
+                                
+                                {
+                                    label               : 'Fiche d\'information',
+                                    backgroundColor     : 'rgba(60,141,188,0.9)',
+                                    borderColor         : 'rgba(60,141,188,0.8)',
+                                    pointRadius          : false,
+                                    pointColor          : '#3b8bba',
+                                    pointStrokeColor    : 'rgba(60,141,188,1)',
+                                    pointHighlightFill  : '#fff',
+                                    pointHighlightStroke: 'rgba(60,141,188,1)',
+                                    data                : miByMonth
+                                },
+                            ]
+                        },
+                        options : {
+                            scales: {
+                                y: {
+                                    max: 9,
+                                    min: 0, 
+                                    stepSize: 1
+    
+                                },
+                            }
+                        }
+                    
+                    });
+    
+                    
+    
+    
+                    //alerts par regions
+    
+                    labels = []
+                    miByRegions = []
+    
+                    for(var key in response.mi_by_regions){
+                        labels.push(key)
+                        miByRegions.push (response.mi_by_regions[key])
+                    }
+    
+                    var miCanvas3 = $('#donutChartRegion').get(0).getContext('2d');
+
+                    var midonutData3      = {
+                        labels: labels,
+                        datasets: [
+                            
+                            {
+                                label               : 'Missions',
+                                backgroundColor     : ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#686868', '#f56004', '#30c00f', '#f40c12', '#00d0df'],
+                                borderColor         : 'rgba(60,141,188,0.8)',
+                                pointRadius          : false,
+                                pointColor          : '#3b8bba',
+                                pointStrokeColor    : 'rgba(60,141,188,1)',
+                                pointHighlightFill  : '#fff',
+                                pointHighlightStroke: 'rgba(60,141,188,1)',
+                                data                : miByRegions
+                            }
+                        ]
+                    }
+    
+                    
+                    
+                    var miChartRegion =  new Chart(miCanvas3, {
+                        type: 'pie',
+                        data: midonutData3,
+                        options: {
+                            responsive: true,
+                            maintainAspectRatio: true,
+                            plugins: {
+                                labels: {
+                                render: 'percentage',
+                                precision: 2
+                                }
+                            },
+                        }
+                    })
+    
+                    
+                    // by canals
+                    labels = []
+                    miByOrg = []
+    
+                    for(var key in response.mi_by_org){
+                        labels.push(key)
+                        miByOrg.push (response.mi_by_org[key])
+                    }
+    
+    
+                    var miChartCanvas2 = $('#donutOrg').get(0).getContext('2d')
+
+                    var coloR = []
+                    var dynamicColors = function() {
+                        var r = Math.floor(Math.random() * 255);
+                        var g = Math.floor(Math.random() * 255);
+                        var b = Math.floor(Math.random() * 255);
+                        return "rgb(" + r + "," + g + "," + b + ")";
+                    };
+    
+                    for (var i in labels) {
+                        
+                        coloR.push(dynamicColors());
+                    }
+    
+                    var midonutData2      = {
+                        labels: labels,
+                        datasets: [
+                            {
+                            data: miByOrg,
+                            backgroundColor : coloR,
+                            }
+                        ]
+                    }
+    
+                    //Créer des stat en forme circulaires
+                    // You can switch between pie and douhnut using the method below.
+                    var miorgDonut = new Chart(miChartCanvas2, {
+                        type: 'pie',
+                        data: midonutData2 
+                        
+                    })
+    
+                  
+    
+                    chartArray.push(ChartMois , miChartRegion , miorgDonut)
+    
+    
+                }
+            });
+    
+        }
+    </script>
+
 {% endblock %}
