--- a/_shared/templates/registration/register.html
+++ b/_shared/templates/registration/register.html
@@ -67,7 +67,7 @@
             {% endif %}
             
         
-            <div class="card mt-4 login-card">
+            <div class="card mt-4">
                 <div class="card-header text-center">
                     <h3><b>SNOIE Data Management Tools</b></h3>
                 </div>
@@ -89,24 +89,71 @@
                         </div>
                     {% endif %}
                         
-                    <p class="login-box-msg">Connectez-vous pour accéder à votre session</p>
+                    <p class="login-box-msg">Inscrivez-vous pour accéder à la plateforme</p>
                     
                     <form  method="post">{% csrf_token %}
-                        {% for field in form %}
-                            <div class="input-group mb-3">
-                                {% render_field field class="form-control" required="" placeholder=field.label %}
-                                    
-                                {% if field.errors %}
-                                    <small>{{ field.errors|striptags }}</small> 
-                                {% endif %}
-                            </div>
+                        <div class="form-group mb-3">
+                            <label> Nom(s) *</label>
+                            <input type="text" class="form-control" placeholder="Noms" name="last-name"  required>
+                            <span class="text-danger">  </span>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label> Prénom(s) *</label>
+                            <input type="text" class="form-control" placeholder="Prenoms" name="first-name"  required>
+                            <span class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label>Email*</label>
+                            <input type="email" class="form-control" placeholder="toi@mail.com" name="email">
+                            <span class="text-danger"></span>
+                        </div>
+    
+                        <div class="form-group mb-3">
+                            <label>Genre </label>
+                           
+                                <input type="radio" class="" value="F" name="genre" > Femme
+                                <input type="radio" class="" value="H" name="genre" >  Homme
+                            <span class="text-danger"></span>
+                        </div>
+    
+                        <div class="form-group mb-3">
+                            <label>Telephone</label>
+                            <input type="text" class="form-control" placeholder="+2376XXXXXXXX" name="tel" id="phone" required>
+                            <span class="text-danger"></span>
+                           
+                        </div>
+                        <div class="form-group">
+                            <label>Organisation*</label>
+                            <select class="form-control select2" style="width: 100%;" name="org">
                                 
-                        {% endfor %}
+                                    <option value=""></option>
+                                
+                            </select>
+                        </div>
+                        <span class="text-danger"></span>
+                        <div class="form-group mb-3">
+                            <label>Mot de passe*</label>
+                            <input type="password" class="form-control" placeholder="Mot de passe" name="mdp"  required>
+                            <span class="passCheck"></span>
+                        </div>
+                        <span class="text-danger"></span>
+                        <div class="form-group mb-3">
+                            <label>Entrez le mot de passe </label>
+                            <input type="password" class="form-control" placeholder="Confirmer votre mot de passe" name="mdp_conf" required>
+                        </div>
+                
+                        <span class="text-danger"></span>
+                        <div class="form-group form-check mb-3">
+                           En m'inscrvivant, j'accepte <a href="#" data-toggle="modal" data-target="#conditionsModal">les conditions d'utilisation de SNOIE Data Management Tools</a>
+                        </div>
+                        <div class="g-recaptcha" data-sitekey="6LefMmEjAAAAADKaopQypSvl9rLxOQS5HVPCWazq"></div>  </br>
+                        
                         <div class="row">
                             <div class="col-12">
-                                <button type="submit" class="btn btn-success btn-block" name="connecter">Connectez-vous</button>
+                                <button type="submit" class="btn btn-success btn-block" name="connecter">Inscription</button>
                             </div>
-                            <!-- /.col -->
                         </div>
                     </form>
                     <p class="mb-1">
