--- a/static/css/local/style.css
+++ b/static/css/local/style.css
@@ -234,7 +234,8 @@ select.list-dt:focus {
 
 .error {
     color: #ea1111;
-}
+    border-color: #ea1111;
+  }
 
 input.error {
     border-color: #ea1111;
