--- a/_shared/templates/registration/base.html
+++ b/_shared/templates/registration/base.html
@@ -14,6 +14,7 @@
         <link rel="shortcut icon" href="{% static 'images/snoie-logo.jpeg' %}" type="image/x-icon"/>
         <link rel="stylesheet" href="{% static 'css/adminlte.min.css' %}"/>
         <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/local/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
         <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
